...
    final loginProvider = Provider.of<LoginProvider>(context);
    final bool esAdmin = loginProvider.usuarioLogueado?.esAdmin ?? false;

    // Construcción de la lista de elementos del menú condicionalmente
    final List<PopupMenuEntry<AppBarMenuOption>> menuItems = [
      const PopupMenuItem(
        key: Key('menuitem_verPerfil'),
        value: AppBarMenuOption.verPerfil,
        child: Row(
          children: [
            Icon(Icons.person_2_outlined, color: Colors.blue),
            SizedBox(width: 8),
            Text('Ver mi perfil'),
...
          ],
        ),
      ),
    );

    return PopupMenuButton<AppBarMenuOption>(
      key: const Key('menu_perfil'),
      tooltip: 'Navegación',
      onSelected: (item) => _onSelected(context, item),
      icon: Builder(
        builder: (context) {
          final String urlImagen = loginProvider.usuarioLogueado?.imagenPerfil ?? '';
          final String? nickUsuario = loginProvider.usuarioLogueado?.nick;
...
