...
                            ),
                            Expanded(
                              flex: 2,
                              child: TabButton(
                                key: const Key('tab_buscar'),
                                icono: Icons.search,
                                etiqueta: "Buscar",
                                seleccionado: tabSeleccionada == 2,
                                onTap: () =>
                                    setState(() => tabSeleccionada = 2),
                              ),
                            ),
                          ],
...
