...
          const SizedBox(height: 30),

          Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [
              ElevatedButton(
                key: const Key('botonEliminarCuenta'),
                onPressed: () async {
                  final provider = Provider.of<LoginProvider>(
                    context,
                    listen: false,
                  );
                  final bool success = await provider
...
