...
                : ListView.builder(
                    shrinkWrap: true,
                    itemCount: _amigos.length,
                    itemBuilder: (_, i) {
                      final a = _amigos[i];
                      return GestureDetector(
                        key: Key('ListaAmigos'),
                        child: AmigoListItem(
                          key: ValueKey(a.documentID),
                          nombre: a.nombre,
                          amigosEnComun: a.amigosEnComun,
                          imagenPerfil: a.imagenPerfil,
                          onQuitarAmigo: () => _confirmarYEliminarAmigo(a),
...
